# configurable-http-proxy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  python-app.yml
configurable_http_proxy/: __init__.py  _version.py  cli.py  configproxy.py  dbstore.py  handlers.py  store.py  trie.py
configurable_http_proxy_test/: dummy_store.py  test_api.py  test_proxy.py  test_store.py  test_trie.py  testutil.py
configurable_http_proxy_test/resources/errors/: error.html
jupyterhub_python_proxy/: __init__.py  _version.py  cli.py  configproxy.py  handlers.py  store.py
jupyterhub_python_proxy/templates/: 404.html  500.html
jupyterhub_python_proxy_test/: dummy_store.py  test_api.py  test_proxy.py  test_store.py  test_trie.py
jupyterhub_python_proxy_test/resources/errors/: 404.html
requirements/: build.txt  dev.txt  lint.txt
